Revision history for Petal.

2.06
    - Added HTML Errors mode

2.05 Mon Apr  5 14:14:46 2004
    - Fixed broken test

2.04 Thu Mar 18 17:33:45 2004
    - Added broken attributes parsing test
    - Updated MKDoc::XML dependency
 
2.03 Mon Mar 15 16:25:59 2004
    - Don't ask me what happened with 2.02
    - Added a test case for metal double include

2.01 Wed Dec 10 15:21:35 2003
    - Deprecated $Petal::ENCODE
    - Petal now always returns in Perl's internal format 

2.00 Thu Nov  6 12:05:13 2003
    - This version *can* break backwards compatibility
    - Simple re-release of 1.10_09 which seems stable

1.10_09
    - Fixed CodeGenerator not backslashing backslashes properly
    - Fixed repeat/end bug
    - Added warning in case of weird-looking 'attributes' statement

1.10_08
    - Fixed metal:use-macro not being parsed in XHTML output mode
    - Fixed unnecessary warning

1.10_07
    - Added incomplete METAL implementation

1.10_06
    - Uncommented TAINT stuff (again!)
    - Refactored to work with MKDoc::XML 0.60
    - Changed CodeGenerator.om decode_backslash_semicolon mechanism
    - Fixed Petal dying on <--! <?pi?> --> comments
    - Fixed generate_events_comment incorrectly encoding entities

1.10_05
    - Changed the rules for when HTML entities are decoded

1.10_04
    - Fixed infinite recursion on non-existent modifiers
 
1.10_03
    - Fixed File::Spec use of uninitialized values
    - Fixed somehow broken Petal::_process_absolutize_pathes() 
    - Fixed entities test running nothing when using perl 5.6.x

1.10_02
    - Changed Petal to ignore Encode if Perl < 5.007
    - Fixed a @BASE_DIR inconsistency in process()
    - Fixed potential caching bug on non Unix platforms

1.10_01
    - Changed Petal's parsing backend to MKDoc::XML::TreeBuilder
    - Added prefixes in path expressions, i.e. /foo/var:bar
    - Refactored Petal's use of the Encode module

1.06 Wed Aug 20 17:41:21 2003
    - fixed omit-tag="" bug