@@ -132,6 +132,7 @@ sub process
     }
     
     # return '' unless (defined $current);
+    # $current = "$current" if (defined $current);
     return $current;
 }
 
