@@ -6,8 +6,10 @@ use Petal;
 
 $Petal::DISK_CACHE   = 0;
 $Petal::MEMORY_CACHE = 0;
+$Petal::HTML_ERRORS  = 1;
 $Petal::BASE_DIR     = ('t/data/html_errors');
 my $file             = 'not_xml.html';
+
 
 {
     my $t = new Petal ( file => $file );
@@ -16,7 +18,8 @@ my $file             = 'not_xml.html';
     like ($s, qr/\<\/pre\>/);
 }
 
-$file             = 'no_var.html';
+
+$file = 'no_var.html';
 
 {
     my $t = new Petal ( file => $file );
