@@ -2,6 +2,7 @@ Revision history for Petal.
 
 2.06
     - Added HTML Errors mode
+    - Fixed Petal not encoding overloaded objects
 
 2.05 Mon Apr  5 14:14:46 2004
     - Fixed broken test
